# image-video-frames-idea

./: Cargo.toml
src/: main.rs
